--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-bootstrap-typeahead": "^6.0.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "tippy": "^0.0.0",
+    "tippy.js": "^6.3.7",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
