--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -7,6 +7,8 @@ on:
   pull_request:
     branches:
       - main
+  schedule:
+    - cron: '0 13 * * 1'
 
 jobs:
   build:
@@ -24,6 +26,9 @@ jobs:
 
       - name: Install NPM packages
         run: npm ci
+
+      - name: Update holidays database
+        run: npm install date-holidays@latest --save
 
       - name: Build project
         run: npm run build
