--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.10",
     "bootstrap": "^5.2.3",
     "date-holidays": "^3.16.15",
+    "deep-equal": "^2.2.0",
     "js-year-calendar": "^2.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
